[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scripts/ui/hud.gd" type="Script" id=1]
[ext_resource path="res://src/assets/sprites/ui/ui_theme.tres" type="Theme" id=2]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="TopBar" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.5 )

[node name="MarginContainer" type="MarginContainer" parent="TopBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 1004.0
margin_bottom = 30.0

[node name="ScoreLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
text = "分数: 0"

[node name="LivesContainer" type="HBoxContainer" parent="TopBar/MarginContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )

[node name="LivesLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer/LivesContainer"]
margin_right = 60.0
margin_bottom = 20.0
text = "生命: "

[node name="LivesIcons" type="HBoxContainer" parent="TopBar/MarginContainer/HBoxContainer/LivesContainer"]
margin_left = 64.0
margin_right = 64.0
margin_bottom = 20.0

[node name="LevelLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
text = "关卡: 1"

[node name="WeaponContainer" type="HBoxContainer" parent="TopBar/MarginContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 462.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )

[node name="WeaponLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer/WeaponContainer"]
margin_right = 60.0
margin_bottom = 20.0
text = "武器: "

[node name="WeaponIcon" type="TextureRect" parent="TopBar/MarginContainer/HBoxContainer/WeaponContainer"]
margin_left = 64.0
margin_right = 64.0
margin_bottom = 20.0

[node name="AmmoLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer/WeaponContainer"]
margin_left = 68.0
margin_right = 68.0
margin_bottom = 20.0

[node name="Spacer" type="Control" parent="TopBar/MarginContainer/HBoxContainer"]
margin_left = 466.0
margin_right = 984.0
margin_bottom = 20.0
size_flags_horizontal = 3